# stdout-emoji-panel

./: .clang-format  CMakeLists.txt  CMakeSettings.json  clipboard.cpp  clipboard.h  font.cpp  font.h  license.txt  main.cpp  readme.md  unicode-generate-list.py
